# SysPro

./: README.md  ReadMe
App/: BloomFilter.cpp  BloomFilter.h  CMakeLists.txt  CitizenRecords.cpp  CitizenRecords.h  HashUtil.cpp  HashUtil.h  InputHandler.cpp  InputHandler.h  SkipList.cpp  SkipList.h  main.cpp
Bash Script/: inputFile.txt  testFile.sh
Bash_Script/: inputFile  testFile.sh  virusesFile.txt
Project_1/App/: CMakeLists.txt  CitizenRecords.cpp  CitizenRecords.h  InputHandler.h  SkipList.h
Project_1/Bash_Script/: countriesFile  testFile.sh
Project_2/: ReadMe2
Project_2/App/: BloomFilter.cpp  BloomFilter.h  CMakeLists.txt  CitizenRecords.cpp  CitizenRecords.h  InputHandler.cpp  Monitor.cpp  SkipList.cpp  SkipList.h  TravelRecords.cpp  TravelRecords.h  main.cpp  makefile
Project_2/Bash_Script/: create_infiles.sh
Project_2/Bash_Script/CountryLogs/Greece/: Greece-1.txt
Project_2/Bash_Script/CountryLogs/Italy/: Italy-2.txt
Project_2/Bash_Script/CountryLogs/Japan/: Japan-1.txt  Japan-2.txt
Project_3/: BloomFilter.cpp  BloomFilter.h  CMakeLists.txt  CitizenRecords.cpp  CitizenRecords.h  HashUtil.h  InputHandler.cpp  InputHandler.h  Monitor.cpp  ReadMe3  Server.cpp  SkipList.cpp  TravelRecords.cpp  main.cpp  mainClient.cpp  makefile
Project_3/CountryLogs/Germany/: Germany-1.txt  Germany-2.txt  Germany-3.txt
Project_3/CountryLogs/Greece/: Greece-2.txt  Greece-3.txt
Project_3/CountryLogs/Italy/: Italy-1.txt  Italy-3.txt
Project_3/CountryLogs/Japan/: Japan-3.txt
Project_3/CountryLogs/Korea/: Korea-1.txt  Korea-2.txt
(+7 files in other folders)
